local-llm/mistral-7b-ollama/03-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: mistral-7b-ollama
    namespace: homelab-ai
    annotations:
        traefik.ingress.kubernetes.io/service.serversscheme: http
        traefik.ingress.kubernetes.io/service.serverstransport: homelab-ai-llm-transport@kubernetescrd
spec:
    selector:
        app: mistral-7b-ollama
    ports:
        - port: 80
          targetPort: 11434
